<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.btxtech</groupId>
    <artifactId>razarion</artifactId>
    <packaging>war</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>Experimantal WebGL</name>

    <properties>
        <errai.version>3.2.1.Final</errai.version>
        <gwt.version>2.7.0</gwt.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javaee.version>1.0.2.Final</javaee.version>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jboss.errai.bom</groupId>
                <artifactId>errai-bom</artifactId>
                <version>${errai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- GWT -->
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwt.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <version>${gwt.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-elemental</artifactId>
            <version>${gwt.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Game -->
        <dependency>
            <groupId>com.razarion</groupId>
            <artifactId>collisiontest</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <!-- use for compilation only -->
            <groupId>com.razarion</groupId>
            <artifactId>collisiontest</artifactId>
            <version>1.0-SNAPSHOT</version>
            <classifier>sources</classifier>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.spec</groupId>
            <artifactId>jboss-javaee-7.0</artifactId>
            <version>${javaee.version}</version>
            <type>pom</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.12</version>
            <scope>test</scope>
        </dependency>
        <!-- Errai -->
        <dependency>
            <groupId>org.jboss.errai</groupId>
            <artifactId>errai-cdi-jboss</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jboss.errai</groupId>
            <artifactId>errai-javaee-all</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jboss.errai</groupId>
            <artifactId>errai-jboss-as-support</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-jpamodelgen</artifactId>
            <version>5.0.9.Final</version>
            <scope>provided</scope>
        </dependency>
        <!-- Test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jglue.cdi-unit</groupId>
            <artifactId>cdi-unit</artifactId>
            <version>3.1.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>JBOSS_NEXUS</id>
            <url>http://repository.jboss.org/nexus/content/groups/public</url>
        </repository>
    </repositories>

    <build>
        <finalName>${project.artifactId}</finalName>
        <outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory>

        <plugins>
            <plugin>
                <groupId>org.wildfly.plugins</groupId>
                <artifactId>wildfly-maven-plugin</artifactId>
                <version>1.0.2.Final</version>
                <extensions>false</extensions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>${gwt.version}</version>
                <configuration>
                    <logLevel>INFO</logLevel>
                    <noServer>true</noServer>
                    <extraJvmArgs>-Xmx2048m -XX:CompileThreshold=7000 -XX:MaxPermSize=512M</extraJvmArgs>
                    <runTarget>webgl.html</runTarget>
                    <hostedWebapp>src/main/webapp</hostedWebapp>
                    <strict>true</strict>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>2.4.1</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${basedir}</directory>
                            <includes>
                                <include>src/main/webapp/app/</include>
                                <include>src/main/webapp/WEB-INF/deploy/</include>
                                <include>src/main/webapp/WEB-INF/lib/</include>
                                <include>**/gwt-unitCache/**</include>
                                <include>.errai/</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <!--<plugin> Somehow crashes with ERRAI marshalling -->
                <!--<inherited>true</inherited>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-compiler-plugin</artifactId>-->
                <!--<version>3.5.1</version>-->
                <!--<configuration>-->
                    <!--<compilerArguments>-->
                        <!--<processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>-->
                    <!--</compilerArguments>-->
                <!--</configuration>-->
            <!--</plugin>-->
        </plugins>
    </build>
</project>
